# xlsx_purchase_monitor

./: Cargo.toml  build.rs
src/: init_data.rs  main.rs  orders_plan.rs  xls_matrix.rs  xlsx.rs
Исходные данные/: Остатки.xlsx  План обеспечения.xlsx  Сроки доставки.xlsx
Исходные данные/Заказы поставщикам/: Заказ_100.xlsx  Заказ_133.xlsx  Заказ_237.xlsx  Заказ_241.xlsx  Заказ_255.xlsx  Заказ_256.xlsx  Заказ_257.xlsx  Заказ_265.xlsx  Заказ_269.xlsx  Заказ_271.xlsx
Исходные данные/Спецификации/: B6046-GB_20240101.xlsx  B6046-WB_20240101.xlsx  B6047-GB_20240101.xlsx  B6047-WB_20240101.xlsx  BR-300_20240101.xlsx  BR-600_20240101.xlsx  BR-6041_20240101.xlsx  BZ-003_20240101.xlsx  BZ-004 3led_20240101.xlsx  CC-20_20240101.xlsx  CC25-2700K_20240101.xlsx  CC25-6500K-200mm_20240101.xlsx  CC25-6500K-350mm_20240101.xlsx  G-pixel 100x100 2700K_20240101.xlsx  G-pixel 100x100 4000K_20240101.xlsx  G-pixel 100x100 5700K_20240101.xlsx  GB-3_20240101.xlsx  Линза 40 L-серия_20240101.xlsx  Линза 60 L-серия_20240101.xlsx  Линза 90 L-серия_20240101.xlsx  Модуль 2ExM-45-N-N_20240101.xlsx  Модуль M-45-N-N_20240101.xlsx  Светодиод L-серии 4000K_20240101.xlsx  Светодиод L-серии 5700K_20240101.xlsx  Светодиод L-серии 6500K_20240101.xlsx
